--- a/src/input.css
+++ b/src/input.css
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-black {
+    @apply text-2xl block  border-black border-2  mr-3 rounded-full py-1 px-3 mt-2 transition-all hover:bg-black hover:text-green-300 cursor-pointer hover:-translate-y-1
+}
