menambahkan image baru dan akan menambahkan css toolkit pada button .

--- a/src/input.css
+++ b/src/input.css
@@ -4,5 +4,5 @@
 @tailwind utilities;
 
 .btn-black {
-    @apply text-2xl block  border-black border-2  mr-3 rounded-full py-1 px-3 mt-2 transition-all hover:bg-black hover:text-green-300 cursor-pointer hover:-translate-y-1
+    @apply text-2xl block  border-black border-2  mr-3 rounded-full py-1 px-3 mt-2 transition-all hover:bg-black hover:text-green-300 cursor-pointer hover:-translate-y-1 relative
 }
