--- a/public/output.css
+++ b/public/output.css
@@ -519,12 +519,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: grid;
 }
 
+.hidden{
+  display: none;
+}
+
 .h-screen{
   height: 100vh;
 }
 
+.h-7{
+  height: 1.75rem;
+}
+
 .h-\[100px\]{
   height: 100px;
+}
+
+.w-8{
+  width: 2rem;
 }
 
 .w-40{
@@ -663,117 +675,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(134 239 172 / var(--tw-text-opacity));
 }
 
-.before\:absolute::before{
-  content: var(--tw-content);
+.toolkit{
   position: absolute;
-}
-
-.before\:top-0::before{
-  content: var(--tw-content);
   top: 0px;
-}
-
-.before\:right-0::before{
-  content: var(--tw-content);
   right: 0px;
-}
-
-.before\:block::before{
-  content: var(--tw-content);
-  display: block;
-}
-
-.before\:h-10::before{
-  content: var(--tw-content);
-  height: 2.5rem;
-}
-
-.before\:h-5::before{
-  content: var(--tw-content);
-  height: 1.25rem;
-}
-
-.before\:min-h-full::before{
-  content: var(--tw-content);
-  min-height: 100%;
-}
-
-.before\:w-10::before{
-  content: var(--tw-content);
-  width: 2.5rem;
-}
-
-.before\:w-20::before{
-  content: var(--tw-content);
+  display: flex;
+  height: 100%;
   width: 5rem;
-}
-
-.before\:translate-x-10::before{
-  content: var(--tw-content);
-  --tw-translate-x: 2.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:translate-x-20::before{
-  content: var(--tw-content);
-  --tw-translate-x: 5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:translate-x-24::before{
-  content: var(--tw-content);
   --tw-translate-x: 6rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:rounded::before{
-  content: var(--tw-content);
+  align-items: center;
+  justify-content: center;
   border-radius: 0.25rem;
-}
-
-.before\:bg-red-300::before{
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.before\:bg-black::before{
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.before\:bg-green-300::before{
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.before\:bg-white::before{
-  content: var(--tw-content);
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.before\:bg-\[url\(\'\.\.\/img\/question-mark\.svg\'\)\]::before{
-  content: var(--tw-content);
-  background-image: url('../img/question-mark.svg');
-}
-
-.before\:text-green-300::before{
-  content: var(--tw-content);
-  --tw-text-opacity: 1;
-  color: rgb(134 239 172 / var(--tw-text-opacity));
-}
-
-.before\:text-white::before{
-  content: var(--tw-content);
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.before\:text-black::before{
-  content: var(--tw-content);
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
