--- a/src/input.css
+++ b/src/input.css
@@ -4,9 +4,10 @@
 @tailwind utilities;
 
 .btn-black {
-    @apply text-2xl block  border-black border-2  mr-3 rounded-full py-1 px-3 mt-2 transition-all hover:bg-black hover:text-green-300 cursor-pointer hover:-translate-y-1 relative
+    @apply text-2xl block  border-black border-2  mr-3 rounded-full py-1 px-3 mt-2 transition-all hover:bg-black hover:text-green-300 cursor-pointer hover:-translate-y-1 relative duration-200 ease-in-out 
 }
 
 .toolkit{
-    @apply absolute w-20 h-full top-0 right-0 translate-x-24 text-black rounded bg-white flex justify-center items-center duration-300 ease-in-out
+    @apply absolute w-20 h-full top-0 right-0 -translate-y-full rounded bg-black justify-center items-center cursor-default
 }
+
