--- a/public/output.css
+++ b/public/output.css
@@ -681,7 +681,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 0px;
   height: 100%;
   width: 5rem;
-  --tw-translate-y: -100%;
+  --tw-translate-x: 6rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   cursor: default;
   align-items: center;
