--- a/public/output.css
+++ b/public/output.css
@@ -527,16 +527,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100vh;
 }
 
-.h-7{
-  height: 1.75rem;
+.h-10{
+  height: 2.5rem;
 }
 
 .h-\[100px\]{
   height: 100px;
 }
 
-.w-8{
-  width: 2rem;
+.w-9{
+  width: 2.25rem;
 }
 
 .w-40{
@@ -578,6 +578,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-green-300{
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-black{
@@ -688,6 +693,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
   border-radius: 0.25rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
