--- a/public/output.css
+++ b/public/output.css
@@ -503,14 +503,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.5rem;
 }
 
-.ml-auto{
-  margin-left: auto;
-}
-
-.mr-auto{
-  margin-right: auto;
-}
-
 .block{
   display: block;
 }
@@ -547,12 +539,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   align-items: center;
 }
 
+.justify-center{
+  justify-content: center;
+}
+
 .justify-self-start{
   justify-self: start;
 }
 
 .overflow-hidden{
   overflow: hidden;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
 }
 
 .bg-green-300{
@@ -673,7 +673,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .card{
   margin: 1.25rem;
-  max-width: 20ch;
+  max-width: 30%;
   border-radius: 0.375rem;
   border-width: 2px;
   --tw-border-opacity: 1;
@@ -700,3 +700,38 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.circle-decorator-t-r{
+  position: absolute;
+  top: -5rem;
+  right: -5rem;
+  display: block;
+  height: 20rem;
+  width: 20rem;
+  border-radius: 50%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.circle-decorator-b-l{
+  position: absolute;
+  bottom: -5rem;
+  left: -5rem;
+  display: block;
+  height: 20rem;
+  width: 20rem;
+  border-radius: 50%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.circle-decorator-b-r{
+  position: absolute;
+  bottom: -5rem;
+  right: -5rem;
+  display: block;
+  height: 10rem;
+  width: 10rem;
+  border-radius: 50%;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
