--- a/public/output.css
+++ b/public/output.css
@@ -494,6 +494,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 42%;
 }
 
+.z-10{
+  z-index: 10;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -515,12 +519,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+.h-20{
+  height: 5rem;
+}
+
 .h-screen{
   height: 100vh;
 }
 
 .h-10{
   height: 2.5rem;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .w-9{
@@ -555,6 +567,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow-x: hidden;
 }
 
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.bg-red-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
 .bg-green-300{
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
@@ -569,9 +590,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.5rem;
 }
 
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .px-3{
@@ -597,14 +618,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-family: Roboto;
 }
 
-.text-8xl{
-  font-size: 6rem;
-  line-height: 1;
-}
-
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-8xl{
+  font-size: 6rem;
+  line-height: 1;
 }
 
 .text-6xl{
@@ -618,6 +639,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tracking-wide{
   letter-spacing: 0.025em;
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-green-400{
@@ -734,4 +760,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 50%;
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.dialogbox{
+  position: absolute;
+  display: block;
+  border-width: 4px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+  font-family: Roboto;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
