--- a/public/output.css
+++ b/public/output.css
@@ -494,10 +494,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 42%;
 }
 
-.z-10{
-  z-index: 10;
-}
-
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -519,20 +515,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-.h-20{
-  height: 5rem;
-}
-
 .h-screen{
   height: 100vh;
 }
 
 .h-10{
   height: 2.5rem;
-}
-
-.w-20{
-  width: 5rem;
 }
 
 .w-9{
@@ -565,15 +553,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .overflow-x-hidden{
   overflow-x: hidden;
-}
-
-.rounded{
-  border-radius: 0.25rem;
-}
-
-.bg-red-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .bg-green-300{
@@ -618,14 +597,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-family: Roboto;
 }
 
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
 .text-8xl{
   font-size: 6rem;
   line-height: 1;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-6xl{
@@ -639,11 +618,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .tracking-wide{
   letter-spacing: 0.025em;
-}
-
-.text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-green-400{
@@ -764,15 +738,23 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .dialogbox{
   position: absolute;
+  top: 20%;
+  right: 50%;
+  z-index: 9999;
   display: block;
-  border-width: 4px;
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+  min-height: 40%;
+  max-width: 40%;
+  --tw-translate-x: 50%;
+  --tw-translate-y: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  border-radius: 0.25rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  padding: 1rem;
   font-family: Roboto;
   font-size: 1.25rem;
   line-height: 1.75rem;
+  font-weight: 700;
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(134 239 172 / var(--tw-text-opacity));
 }
