--- a/public/output.css
+++ b/public/output.css
@@ -625,6 +625,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(74 222 128 / var(--tw-text-opacity));
 }
 
+.opacity-0{
+  opacity: 0;
+}
+
 .btn-black{
   position: relative;
   margin-right: 0.75rem;
