--- a/public/output.css
+++ b/public/output.css
@@ -511,6 +511,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: flex;
 }
 
+.grid{
+  display: grid;
+}
+
 .hidden{
   display: none;
 }
@@ -523,6 +527,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2.5rem;
 }
 
+.h-auto{
+  height: auto;
+}
+
 .w-9{
   width: 2.25rem;
 }
@@ -531,29 +539,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 10rem;
 }
 
-@-webkit-keyframes pop{
-  0%{
-    transform: scale(0);
-  }
-
-  100%{
-    transform: scale(1);
-  }
+.cursor-pointer{
+  cursor: pointer;
 }
 
-@keyframes pop{
-  0%{
-    transform: scale(0);
-  }
-
-  100%{
-    transform: scale(1);
-  }
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.animate-pop{
-  -webkit-animation: pop 450ms ease-in-out forwards;
-          animation: pop 450ms ease-in-out forwards;
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -568,6 +563,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .justify-self-start{
   justify-self: start;
 }
@@ -578,6 +577,23 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .overflow-x-hidden{
   overflow-x: hidden;
+}
+
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-green-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(74 222 128 / var(--tw-border-opacity));
 }
 
 .bg-green-300{
@@ -635,6 +651,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-6xl{
   font-size: 3.75rem;
   line-height: 1;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-extrabold{
